[metadata]
name = enhanced-proxy
version = attr: enhanced_proxy.__version__
description = A powerful and flexible proxy management library for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsutomu-n/enhanced_proxy
author = Tsutomu
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=1.10.7
    aiohttp>=3.8.4
    aiohttp-socks>=0.7.1

[options.extras_require]
dev =
    pytest>=7.3.1
    pytest-asyncio>=0.21.0
    black>=23.3.0
    mypy>=1.2.0